tests/baselines/reference/superPropertyAccess2(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
superPropertyAccess2.ts(13,15): error TS2339: Property 'x' does not exist on type 'typeof C'.
superPropertyAccess2.ts(18,15): error TS2576: Property 'bar' does not exist on type 'C'. Did you mean to access the static member 'C.bar' instead?
superPropertyAccess2.ts(19,15): error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
superPropertyAccess2.ts(24,15): error TS2339: Property 'x' does not exist on type 'typeof C'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== superPropertyAccess2.ts (4 errors) ====
    class C {
        public static foo() { }
        public get x() {
            return 1;
        }
    
        public static bar() { }
    }
    
    class D extends C {
        public static foo() {
            super.bar(); // OK
            super.x;  // error
                  ~
!!! error TS2339: Property 'x' does not exist on type 'typeof C'.
        }
    
        constructor() {
            super();
            super.bar(); // error
                  ~~~
!!! error TS2576: Property 'bar' does not exist on type 'C'. Did you mean to access the static member 'C.bar' instead?
            super.x;  // error
                  ~
!!! error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
        }
    
        public static get y() {
            super.bar(); // OK
            super.x; // error
                  ~
!!! error TS2339: Property 'x' does not exist on type 'typeof C'.
            return 1;
        }
    }